display the dataset number

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}IceProd{% end %}
+{% block title %}IceProd - Dataset {{ dataset_num }} Details{% end %}
 
 {% block sidebar %}
 <div class="section">
@@ -10,7 +10,7 @@
 </div>
 {% end %}
 
-{% block page_title %}Dataset Details{% end %}
+{% block page_title %}Dataset {{ dataset_num }} Details{% end %}
 
 {% block body %}
 <div style="margin-bottom:1em">
