add dataset description to head

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -2,6 +2,8 @@
 
 {% block title %}IceProd - Dataset {{ dataset_num }} Details{% end %}
 
+{% block description %}{{ dataset["description"] }}{% end %}
+
 {% block sidebar %}
 <div class="section">
     <h4><a href="/submit">Submit New Dataset</a></h4>
