--- a/iceprod/server/data/www_templates/base.html
+++ b/iceprod/server/data/www_templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>{% block title %}Default title{% end %}</title>
-    <meta name="description" content="IceProd: a grid middleware for submitting and tracking sets of jobs.">
+    <meta name="description" content="{% block description %}IceProd: a grid middleware for submitting and tracking sets of jobs.{% end %}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/static/favicon.ico">
     <link rel="icon" href="/static/favicon.png">
