--- a/_modules/index.html
+++ b/_modules/index.html
@@ -119,8 +119,12 @@
   <h1>All modules for which code is available</h1>
 <ul><li><a href="iceprod/core.html">iceprod.core</a></li>
 <ul><li><a href="iceprod/core/dataclasses.html">iceprod.core.dataclasses</a></li>
+<li><a href="iceprod/core/exe.html">iceprod.core.exe</a></li>
 <li><a href="iceprod/core/exe_helper.html">iceprod.core.exe_helper</a></li>
+<li><a href="iceprod/core/exe_json.html">iceprod.core.exe_json</a></li>
+<li><a href="iceprod/core/functions.html">iceprod.core.functions</a></li>
 <li><a href="iceprod/core/gridftp.html">iceprod.core.gridftp</a></li>
+<li><a href="iceprod/core/i3exec.html">iceprod.core.i3exec</a></li>
 <li><a href="iceprod/core/jsonRPCclient.html">iceprod.core.jsonRPCclient</a></li>
 <li><a href="iceprod/core/jsonUtil.html">iceprod.core.jsonUtil</a></li>
 <li><a href="iceprod/core/parser.html">iceprod.core.parser</a></li>
@@ -130,14 +134,21 @@
 <ul><li><a href="iceprod/server/config.html">iceprod.server.config</a></li>
 <li><a href="iceprod/server/dbmethods.html">iceprod.server.dbmethods</a></li>
 <ul><li><a href="iceprod/server/dbmethods/auth.html">iceprod.server.dbmethods.auth</a></li>
-<li><a href="iceprod/server/dbmethods/queue.html">iceprod.server.dbmethods.queue</a></li>
+<li><a href="iceprod/server/dbmethods/cron.html">iceprod.server.dbmethods.cron</a></li>
+<li><a href="iceprod/server/dbmethods/web.html">iceprod.server.dbmethods.web</a></li>
 </ul><li><a href="iceprod/server/file_io.html">iceprod.server.file_io</a></li>
 <li><a href="iceprod/server/globus.html">iceprod.server.globus</a></li>
+<li><a href="iceprod/server/module.html">iceprod.server.module</a></li>
+<li><a href="iceprod/server/modules/db.html">iceprod.server.modules.db</a></li>
+<li><a href="iceprod/server/modules/proxy.html">iceprod.server.modules.proxy</a></li>
+<li><a href="iceprod/server/modules/schedule.html">iceprod.server.modules.schedule</a></li>
+<li><a href="iceprod/server/modules/website.html">iceprod.server.modules.website</a></li>
 <li><a href="iceprod/server/nginx.html">iceprod.server.nginx</a></li>
 <li><a href="iceprod/server/pool.html">iceprod.server.pool</a></li>
 <li><a href="iceprod/server/schedule.html">iceprod.server.schedule</a></li>
 <li><a href="iceprod/server/server.html">iceprod.server.server</a></li>
 <li><a href="iceprod/server/squid.html">iceprod.server.squid</a></li>
+<li><a href="iceprod/server/ssl_cert.html">iceprod.server.ssl_cert</a></li>
 </ul><li><a href="time.html">time</a></li>
 </ul>
 
