--- a/server/details/dbtables.html
+++ b/server/details/dbtables.html
@@ -236,6 +236,7 @@
 <li>req_gpu : int</li>
 <li>req_memory : float</li>
 <li>req_disk : float</li>
+<li>req_time : float</li>
 </ul>
 <p><strong>search</strong></p>
 <ul class="simple">
