--- a/_modules/iceprod/server/plugins/condor.html
+++ b/_modules/iceprod/server/plugins/condor.html
@@ -215,6 +215,7 @@
             <span class="n">p</span><span class="p">(</span><span class="s">&#39;output = condor.out.$(Process)&#39;</span><span class="p">)</span>
             <span class="n">p</span><span class="p">(</span><span class="s">&#39;error = condor.err.$(Process)&#39;</span><span class="p">)</span>
             <span class="n">p</span><span class="p">(</span><span class="s">&#39;notification = never&#39;</span><span class="p">)</span>
+            <span class="n">p</span><span class="p">(</span><span class="s">&#39;+IsIceProdJob = True&#39;</span><span class="p">)</span> <span class="c"># mark as IceProd for monitoring</span>
             <span class="n">p</span><span class="p">(</span><span class="s">&#39;want_graceful_removal = True&#39;</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">filelist</span><span class="p">:</span>
                 <span class="n">p</span><span class="p">(</span><span class="s">&#39;transfer_input_files = {}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">filelist</span><span class="p">)))</span>
