--- a/_modules/iceprod/core.html
+++ b/_modules/iceprod/core.html
@@ -135,6 +135,7 @@
              <span class="s">&#39;stderr&#39;</span><span class="p">:</span> <span class="s">&#39;iceprod_err&#39;</span><span class="p">,</span>
              <span class="s">&#39;stdlog&#39;</span><span class="p">:</span> <span class="s">&#39;iceprod_log&#39;</span><span class="p">,</span>
              <span class="s">&#39;stats&#39;</span><span class="p">:</span> <span class="s">&#39;iceprod_stats&#39;</span><span class="p">,</span>
+             <span class="s">&#39;task_exception&#39;</span><span class="p">:</span> <span class="s">&#39;iceprod_task_exception&#39;</span><span class="p">,</span>
              <span class="s">&#39;args&#39;</span><span class="p">:</span> <span class="s">&#39;iceprod_args&#39;</span><span class="p">,}</span>
 
 <span class="nd">@contextmanager</span>
