--- a/_modules/iceprod/core/jsonRPCclient.html
+++ b/_modules/iceprod/core/jsonRPCclient.html
@@ -140,6 +140,7 @@
 <span class="sd">  This is REQUIRED on error and MUST NOT exist on success.</span>
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">import</span> <span class="nn">logging</span>
+<span class="kn">import</span> <span class="nn">time</span>
 <span class="kn">from</span> <span class="nn">threading</span> <span class="k">import</span> <span class="n">RLock</span>
 
 <span class="kn">import</span> <span class="nn">requests</span>
